[gd_scene load_steps=11 format=3 uid="uid://c37vi5itujbsu"]

[ext_resource type="FontFile" uid="uid://kx3kmho3mt5o" path="res://Art/Fonts/Blue Sky 8x8.ttf" id="3_48k3r"]
[ext_resource type="Script" path="res://Scenes/UI/Character Cusomization/character_option.gd" id="4_a02u5"]
[ext_resource type="Script" path="res://Scripts/circle.gd" id="4_rv68d"]
[ext_resource type="Material" uid="uid://bpyc72ajp6yfb" path="res://Art/Shaders/colorswap.tres" id="6_wcssq"]
[ext_resource type="Theme" uid="uid://bmv1iku1at618" path="res://Art/Themes/ui text mid.tres" id="7_nauhl"]
[ext_resource type="PackedScene" uid="uid://beputxcs1pxrh" path="res://Scenes/UI/JuicyMovement.tscn" id="8_1ck4b"]
[ext_resource type="Theme" uid="uid://dpv7tir788p5t" path="res://Art/Themes/ui text small.tres" id="8_s1hmr"]
[ext_resource type="Texture2D" uid="uid://chhc6bjga1571" path="res://Art/Sprites/player idle.png" id="9_yyfrr"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ap13o"]

[sub_resource type="Theme" id="Theme_ldusy"]
Button/colors/font_color = Color(1, 1, 1, 1)
Button/colors/font_focus_color = Color(1, 0, 0, 1)
Button/colors/font_hover_color = Color(1, 0, 0, 1)
Button/font_sizes/font_size = 14
Button/fonts/font = ExtResource("3_48k3r")
Button/styles/focus = SubResource("StyleBoxEmpty_ap13o")

[node name="CharacterOption" type="Button" node_paths=PackedStringArray("scale_target")]
use_parent_material = true
offset_right = 96.0
offset_bottom = 96.0
pivot_offset = Vector2(48, 48)
theme = SubResource("Theme_ldusy")
flat = true
script = ExtResource("4_a02u5")
scale_target = NodePath("ScaleOffset")

[node name="ScaleOffset" type="Control" parent="."]
use_parent_material = true
anchors_preset = 0
pivot_offset = Vector2(48, 48)

[node name="Circle" type="Control" parent="ScaleOffset"]
use_parent_material = true
layout_mode = 3
anchors_preset = 0
offset_left = 24.0
offset_top = 24.0
offset_right = 24.0
offset_bottom = 24.0
script = ExtResource("4_rv68d")
circle_radius = 48
outline_thickness = 4

[node name="UpgradeName" type="RichTextLabel" parent="ScaleOffset"]
use_parent_material = true
clip_contents = false
layout_mode = 0
offset_left = -31.0
offset_top = 7.0
offset_right = 130.0
offset_bottom = 29.0
mouse_filter = 2
theme = ExtResource("7_nauhl")
bbcode_enabled = true
text = "[center]CORGI"

[node name="Sprite2D" type="Sprite2D" parent="ScaleOffset"]
material = ExtResource("6_wcssq")
position = Vector2(48, 51)
scale = Vector2(2, 2)
texture = ExtResource("9_yyfrr")
region_enabled = true
region_rect = Rect2(0, 0, 32, 32)

[node name="JuicyMovement" parent="." node_paths=PackedStringArray("target_control") instance=ExtResource("8_1ck4b")]
visible = false
target_control = NodePath("../ScaleOffset")
bob_frequency = 5.0
bob_amplitude = 10.0
rot_frequency = 2.5
rot_amplitude = 10.0

[node name="Tooltip" type="Control" parent="."]
visible = false
z_index = 10
use_parent_material = true
layout_mode = 3
anchors_preset = 0
offset_left = 48.0
offset_top = 84.0
offset_right = 48.0
offset_bottom = 84.0
mouse_filter = 2

[node name="ColorRect5" type="ColorRect" parent="Tooltip"]
use_parent_material = true
layout_mode = 0
offset_left = -61.0
offset_right = 61.0
offset_bottom = 45.0
color = Color(0.223529, 0.223529, 0.223529, 1)

[node name="ColorRect4" type="ColorRect" parent="Tooltip"]
use_parent_material = true
layout_mode = 0
offset_left = -57.0
offset_top = 4.0
offset_right = 57.0
offset_bottom = 41.0
color = Color(0.101961, 0.101961, 0.101961, 1)

[node name="RichTextLabel" type="RichTextLabel" parent="Tooltip"]
use_parent_material = true
layout_mode = 0
offset_left = -53.0
offset_top = 9.0
offset_right = 51.0
offset_bottom = 36.0
theme = ExtResource("8_s1hmr")
bbcode_enabled = true
text = "Item Description"
fit_content = true
scroll_active = false

[connection signal="focus_entered" from="." to="." method="_on_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_focus_exited"]
